chore!: support Coolify `v4.0.0-beta.364`
