# internal/provider/server_data_source.go
@@ -78,42 +78,42 @@ func (d *serverDataSource) ApiToModel(
 	settings := datasource_server.NewSettingsValueMust(
 		datasource_server.SettingsValue{}.AttributeTypes(ctx),
 		map[string]attr.Value{
-			"concurrent_builds":             optionalInt64(response.Settings.ConcurrentBuilds),
-			"created_at":                    optionalString(response.Settings.CreatedAt),
-			"delete_unused_networks":        optionalBool(response.Settings.DeleteUnusedNetworks),
-			"delete_unused_volumes":         optionalBool(response.Settings.DeleteUnusedVolumes),
-			"docker_cleanup_frequency":      optionalString(response.Settings.DockerCleanupFrequency),
-			"docker_cleanup_threshold":      optionalInt64(response.Settings.DockerCleanupThreshold),
-			"dynamic_timeout":               optionalInt64(response.Settings.DynamicTimeout),
-			"force_disabled":                optionalBool(response.Settings.ForceDisabled),
-			"force_server_cleanup":          optionalBool(response.Settings.ForceServerCleanup),
-			"id":                            optionalInt64(response.Settings.Id),
-			"is_build_server":               optionalBool(response.Settings.IsBuildServer),
-			"is_cloudflare_tunnel":          optionalBool(response.Settings.IsCloudflareTunnel),
-			"is_jump_server":                optionalBool(response.Settings.IsJumpServer),
-			"is_logdrain_axiom_enabled":     optionalBool(response.Settings.IsLogdrainAxiomEnabled),
-			"is_logdrain_custom_enabled":    optionalBool(response.Settings.IsLogdrainCustomEnabled),
-			"is_logdrain_highlight_enabled": optionalBool(response.Settings.IsLogdrainHighlightEnabled),
-			"is_logdrain_newrelic_enabled":  optionalBool(response.Settings.IsLogdrainNewrelicEnabled),
-			"is_metrics_enabled":            optionalBool(response.Settings.IsMetricsEnabled),
-			"is_reachable":                  optionalBool(response.Settings.IsReachable),
-			"is_server_api_enabled":         optionalBool(response.Settings.IsServerApiEnabled),
-			"is_swarm_manager":              optionalBool(response.Settings.IsSwarmManager),
-			"is_swarm_worker":               optionalBool(response.Settings.IsSwarmWorker),
-			"is_usable":                     optionalBool(response.Settings.IsUsable),
-			"logdrain_axiom_api_key":        optionalString(response.Settings.LogdrainAxiomApiKey),
-			"logdrain_axiom_dataset_name":   optionalString(response.Settings.LogdrainAxiomDatasetName),
-			"logdrain_custom_config":        optionalString(response.Settings.LogdrainCustomConfig),
-			"logdrain_custom_config_parser": optionalString(response.Settings.LogdrainCustomConfigParser),
-			"logdrain_highlight_project_id": optionalString(response.Settings.LogdrainHighlightProjectId),
-			"logdrain_newrelic_base_uri":    optionalString(response.Settings.LogdrainNewrelicBaseUri),
-			"logdrain_newrelic_license_key": optionalString(response.Settings.LogdrainNewrelicLicenseKey),
-			"metrics_history_days":          optionalInt64(response.Settings.MetricsHistoryDays),
-			"metrics_refresh_rate_seconds":  optionalInt64(response.Settings.MetricsRefreshRateSeconds),
-			"metrics_token":                 optionalString(response.Settings.MetricsToken),
-			"server_id":                     optionalInt64(response.Settings.ServerId),
-			"updated_at":                    optionalString(response.Settings.UpdatedAt),
-			"wildcard_domain":               optionalString(response.Settings.WildcardDomain),
+			"concurrent_builds":                     optionalInt64(response.Settings.ConcurrentBuilds),
+			"created_at":                            optionalString(response.Settings.CreatedAt),
+			"delete_unused_networks":                optionalBool(response.Settings.DeleteUnusedNetworks),
+			"delete_unused_volumes":                 optionalBool(response.Settings.DeleteUnusedVolumes),
+			"docker_cleanup_frequency":              optionalString(response.Settings.DockerCleanupFrequency),
+			"docker_cleanup_threshold":              optionalInt64(response.Settings.DockerCleanupThreshold),
+			"dynamic_timeout":                       optionalInt64(response.Settings.DynamicTimeout),
+			"force_disabled":                        optionalBool(response.Settings.ForceDisabled),
+			"force_server_cleanup":                  optionalBool(response.Settings.ForceServerCleanup),
+			"id":                                    optionalInt64(response.Settings.Id),
+			"is_build_server":                       optionalBool(response.Settings.IsBuildServer),
+			"is_cloudflare_tunnel":                  optionalBool(response.Settings.IsCloudflareTunnel),
+			"is_jump_server":                        optionalBool(response.Settings.IsJumpServer),
+			"is_logdrain_axiom_enabled":             optionalBool(response.Settings.IsLogdrainAxiomEnabled),
+			"is_logdrain_custom_enabled":            optionalBool(response.Settings.IsLogdrainCustomEnabled),
+			"is_logdrain_highlight_enabled":         optionalBool(response.Settings.IsLogdrainHighlightEnabled),
+			"is_logdrain_newrelic_enabled":          optionalBool(response.Settings.IsLogdrainNewrelicEnabled),
+			"is_metrics_enabled":                    optionalBool(response.Settings.IsMetricsEnabled),
+			"is_reachable":                          optionalBool(response.Settings.IsReachable),
+			"is_sentinel_enabled":                   optionalBool(response.Settings.IsSentinelEnabled),
+			"is_swarm_manager":                      optionalBool(response.Settings.IsSwarmManager),
+			"is_swarm_worker":                       optionalBool(response.Settings.IsSwarmWorker),
+			"is_usable":                             optionalBool(response.Settings.IsUsable),
+			"logdrain_axiom_api_key":                optionalString(response.Settings.LogdrainAxiomApiKey),
+			"logdrain_axiom_dataset_name":           optionalString(response.Settings.LogdrainAxiomDatasetName),
+			"logdrain_custom_config":                optionalString(response.Settings.LogdrainCustomConfig),
+			"logdrain_custom_config_parser":         optionalString(response.Settings.LogdrainCustomConfigParser),
+			"logdrain_highlight_project_id":         optionalString(response.Settings.LogdrainHighlightProjectId),
+			"logdrain_newrelic_base_uri":            optionalString(response.Settings.LogdrainNewrelicBaseUri),
+			"logdrain_newrelic_license_key":         optionalString(response.Settings.LogdrainNewrelicLicenseKey),
+			"sentinel_metrics_history_days":         optionalInt64(response.Settings.SentinelMetricsHistoryDays),
+			"sentinel_metrics_refresh_rate_seconds": optionalInt64(response.Settings.SentinelMetricsRefreshRateSeconds),
+			"sentinel_token":                        optionalString(response.Settings.SentinelToken),
+			"server_id":                             optionalInt64(response.Settings.ServerId),
+			"updated_at":                            optionalString(response.Settings.UpdatedAt),
+			"wildcard_domain":                       optionalString(response.Settings.WildcardDomain),
 		},
 	)
 
