# internal/provider/servers_data_source.go
@@ -98,42 +98,42 @@ func (d *serversDataSource) apiToModel(
 		settings, diag := datasource_servers.NewSettingsValueMust(
 			datasource_servers.SettingsValue{}.AttributeTypes(ctx),
 			map[string]attr.Value{
-				"concurrent_builds":             optionalInt64(sv.Settings.ConcurrentBuilds),
-				"created_at":                    optionalString(sv.Settings.CreatedAt),
-				"delete_unused_networks":        optionalBool(sv.Settings.DeleteUnusedNetworks),
-				"delete_unused_volumes":         optionalBool(sv.Settings.DeleteUnusedVolumes),
-				"docker_cleanup_frequency":      optionalString(sv.Settings.DockerCleanupFrequency),
-				"docker_cleanup_threshold":      optionalInt64(sv.Settings.DockerCleanupThreshold),
-				"dynamic_timeout":               optionalInt64(sv.Settings.DynamicTimeout),
-				"force_disabled":                optionalBool(sv.Settings.ForceDisabled),
-				"force_server_cleanup":          optionalBool(sv.Settings.ForceServerCleanup),
-				"id":                            optionalInt64(sv.Settings.Id),
-				"is_build_server":               optionalBool(sv.Settings.IsBuildServer),
-				"is_cloudflare_tunnel":          optionalBool(sv.Settings.IsCloudflareTunnel),
-				"is_jump_server":                optionalBool(sv.Settings.IsJumpServer),
-				"is_logdrain_axiom_enabled":     optionalBool(sv.Settings.IsLogdrainAxiomEnabled),
-				"is_logdrain_custom_enabled":    optionalBool(sv.Settings.IsLogdrainCustomEnabled),
-				"is_logdrain_highlight_enabled": optionalBool(sv.Settings.IsLogdrainHighlightEnabled),
-				"is_logdrain_newrelic_enabled":  optionalBool(sv.Settings.IsLogdrainNewrelicEnabled),
-				"is_metrics_enabled":            optionalBool(sv.Settings.IsMetricsEnabled),
-				"is_reachable":                  optionalBool(sv.Settings.IsReachable),
-				"is_server_api_enabled":         optionalBool(sv.Settings.IsServerApiEnabled),
-				"is_swarm_manager":              optionalBool(sv.Settings.IsSwarmManager),
-				"is_swarm_worker":               optionalBool(sv.Settings.IsSwarmWorker),
-				"is_usable":                     optionalBool(sv.Settings.IsUsable),
-				"logdrain_axiom_api_key":        optionalString(sv.Settings.LogdrainAxiomApiKey),
-				"logdrain_axiom_dataset_name":   optionalString(sv.Settings.LogdrainAxiomDatasetName),
-				"logdrain_custom_config":        optionalString(sv.Settings.LogdrainCustomConfig),
-				"logdrain_custom_config_parser": optionalString(sv.Settings.LogdrainCustomConfigParser),
-				"logdrain_highlight_project_id": optionalString(sv.Settings.LogdrainHighlightProjectId),
-				"logdrain_newrelic_base_uri":    optionalString(sv.Settings.LogdrainNewrelicBaseUri),
-				"logdrain_newrelic_license_key": optionalString(sv.Settings.LogdrainNewrelicLicenseKey),
-				"metrics_history_days":          optionalInt64(sv.Settings.MetricsHistoryDays),
-				"metrics_refresh_rate_seconds":  optionalInt64(sv.Settings.MetricsRefreshRateSeconds),
-				"metrics_token":                 optionalString(sv.Settings.MetricsToken),
-				"server_id":                     optionalInt64(sv.Settings.ServerId),
-				"updated_at":                    optionalString(sv.Settings.UpdatedAt),
-				"wildcard_domain":               optionalString(sv.Settings.WildcardDomain),
+				"concurrent_builds":                     optionalInt64(sv.Settings.ConcurrentBuilds),
+				"created_at":                            optionalString(sv.Settings.CreatedAt),
+				"delete_unused_networks":                optionalBool(sv.Settings.DeleteUnusedNetworks),
+				"delete_unused_volumes":                 optionalBool(sv.Settings.DeleteUnusedVolumes),
+				"docker_cleanup_frequency":              optionalString(sv.Settings.DockerCleanupFrequency),
+				"docker_cleanup_threshold":              optionalInt64(sv.Settings.DockerCleanupThreshold),
+				"dynamic_timeout":                       optionalInt64(sv.Settings.DynamicTimeout),
+				"force_disabled":                        optionalBool(sv.Settings.ForceDisabled),
+				"force_server_cleanup":                  optionalBool(sv.Settings.ForceServerCleanup),
+				"id":                                    optionalInt64(sv.Settings.Id),
+				"is_build_server":                       optionalBool(sv.Settings.IsBuildServer),
+				"is_cloudflare_tunnel":                  optionalBool(sv.Settings.IsCloudflareTunnel),
+				"is_jump_server":                        optionalBool(sv.Settings.IsJumpServer),
+				"is_logdrain_axiom_enabled":             optionalBool(sv.Settings.IsLogdrainAxiomEnabled),
+				"is_logdrain_custom_enabled":            optionalBool(sv.Settings.IsLogdrainCustomEnabled),
+				"is_logdrain_highlight_enabled":         optionalBool(sv.Settings.IsLogdrainHighlightEnabled),
+				"is_logdrain_newrelic_enabled":          optionalBool(sv.Settings.IsLogdrainNewrelicEnabled),
+				"is_metrics_enabled":                    optionalBool(sv.Settings.IsMetricsEnabled),
+				"is_reachable":                          optionalBool(sv.Settings.IsReachable),
+				"is_sentinel_enabled":                   optionalBool(sv.Settings.IsSentinelEnabled),
+				"is_swarm_manager":                      optionalBool(sv.Settings.IsSwarmManager),
+				"is_swarm_worker":                       optionalBool(sv.Settings.IsSwarmWorker),
+				"is_usable":                             optionalBool(sv.Settings.IsUsable),
+				"logdrain_axiom_api_key":                optionalString(sv.Settings.LogdrainAxiomApiKey),
+				"logdrain_axiom_dataset_name":           optionalString(sv.Settings.LogdrainAxiomDatasetName),
+				"logdrain_custom_config":                optionalString(sv.Settings.LogdrainCustomConfig),
+				"logdrain_custom_config_parser":         optionalString(sv.Settings.LogdrainCustomConfigParser),
+				"logdrain_highlight_project_id":         optionalString(sv.Settings.LogdrainHighlightProjectId),
+				"logdrain_newrelic_base_uri":            optionalString(sv.Settings.LogdrainNewrelicBaseUri),
+				"logdrain_newrelic_license_key":         optionalString(sv.Settings.LogdrainNewrelicLicenseKey),
+				"sentinel_metrics_history_days":         optionalInt64(sv.Settings.SentinelMetricsHistoryDays),
+				"sentinel_metrics_refresh_rate_seconds": optionalInt64(sv.Settings.SentinelMetricsRefreshRateSeconds),
+				"sentinel_token":                        optionalString(sv.Settings.SentinelToken),
+				"server_id":                             optionalInt64(sv.Settings.ServerId),
+				"updated_at":                            optionalString(sv.Settings.UpdatedAt),
+				"wildcard_domain":                       optionalString(sv.Settings.WildcardDomain),
 			},
 		).ToObjectValue(ctx)
 		diags.Append(diag...)
@@ -153,6 +153,9 @@ func (d *serversDataSource) apiToModel(
 			"user":                              optionalString(sv.User),
 			"uuid":                              optionalString(sv.Uuid),
 			"validation_logs":                   optionalString(sv.ValidationLogs),
+			// TODO: Wrong in Coolify schema
+			"delete_unused_networks": optionalBool(sv.Settings.DeleteUnusedNetworks),
+			"delete_unused_volumes":  optionalBool(sv.Settings.DeleteUnusedVolumes),
 		}
 
 		if !filterOnAttributes(attributes, filters) {
