# tools/openapi-overlay.yml
@@ -1120,7 +1120,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Get application by UUID.'
@@ -1149,7 +1149,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
                 - name: delete_configurations
                   in: query
                   description: 'Delete configurations.'
@@ -1201,19 +1201,6 @@ paths:
             summary: Update
             description: 'Update application by UUID.'
             operationId: update-application-by-uuid
-            parameters:
-                - name: uuid
-                  in: path
-                  description: 'UUID of the application.'
-                  required: true
-                  schema:
-                    type: string
-                    format:
-                - name: uuid
-                  in: path
-                  required: true
-                  schema:
-                    type: string
             requestBody:
                 description: 'Application updated.'
                 required: true
@@ -1430,6 +1417,12 @@ paths:
                     $ref: '#/components/responses/404'
             security:
                 - bearerAuth: []
+            parameters:
+                - name: uuid
+                  in: path
+                  required: true
+                  schema:
+                    type: string
     '/applications/{uuid}/envs':
         get:
             tags:
@@ -1444,7 +1437,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'All environment variables by application UUID.'
@@ -1475,7 +1468,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             requestBody:
                 description: 'Env created.'
                 required: true
@@ -1535,7 +1528,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             requestBody:
                 description: 'Env updated.'
                 required: true
@@ -1599,7 +1592,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             requestBody:
                 description: 'Bulk envs updated.'
                 required: true
@@ -1644,13 +1637,14 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
                 - name: env_uuid
                   in: path
                   description: 'UUID of the environment variable.'
                   required: true
                   schema:
                     type: string
+                    format: uuid
             responses:
                 '200':
                     description: 'Environment variable deleted.'
@@ -1682,7 +1676,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
                 - name: force
                   in: query
                   description: 'Force rebuild.'
@@ -1727,7 +1721,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Stop application.'
@@ -1759,7 +1753,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Restart application.'
@@ -1857,7 +1851,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Get all databases'
@@ -1887,7 +1881,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
                 - name: delete_configurations
                   in: query
                   description: 'Delete configurations.'
@@ -1946,7 +1940,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             requestBody:
                 description: 'Database data'
                 required: true
@@ -2798,7 +2792,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Start database.'
@@ -2830,7 +2824,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Stop database.'
@@ -2862,7 +2856,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Restart database.'
@@ -3045,7 +3039,7 @@ paths:
                     $ref: '#/components/responses/400'
             security:
                 - bearerAuth: []
-    /healthcheck:
+    /health:
         get:
             summary: Healthcheck
             description: 'Healthcheck endpoint.'
@@ -3160,11 +3154,11 @@ paths:
             parameters:
                 - name: uuid
                   in: path
-                  description: 'Project UUID.'
+                  description: 'UUID of the application.'
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Project deleted.'
@@ -3188,19 +3182,6 @@ paths:
             summary: Update
             description: 'Update Project.'
             operationId: update-project-by-uuid
-            parameters:
-                - name: uuid
-                  in: path
-                  description: 'UUID of the application.'
-                  required: true
-                  schema:
-                    type: string
-                    format:
-                - name: uuid
-                  in: path
-                  required: true
-                  schema:
-                    type: string
             requestBody:
                 description: 'Project updated.'
                 required: true
@@ -3234,6 +3215,12 @@ paths:
                     $ref: '#/components/responses/404'
             security:
                 - bearerAuth: []
+            parameters:
+                - name: uuid
+                  in: path
+                  required: true
+                  schema:
+                    type: string
     '/projects/{uuid}/{environment_name}':
         get:
             tags:
@@ -3367,11 +3354,14 @@ paths:
                     format:
             responses:
                 '200':
-                    description: 'Private key details.'
+                    description: 'Get all private keys.'
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/PrivateKey'
+                                type: array
+                                items:
+                                    $ref: '#/components/schemas/PrivateKey'
+                                $ref: "#/components/schemas/PrivateKey"
                 '401':
                     $ref: '#/components/responses/401'
                 '400':
@@ -3413,31 +3403,16 @@ paths:
                 - bearerAuth: []
         patch:
             tags:
-                - 'Private Keys'
                 - "Private Keys"
             summary: Update
-            description: 'Update a private key.'
+            description: "Update a private key."
             operationId: update-private-key
-            parameters:
-                - name: uuid
-                  in: path
-                  description: 'Private Key Uuid'
-                  required: true
-                  schema:
-                    type: string
-                    format:
-                - name: uuid
-                  in: path
-                  required: true
-                  schema:
-                    type: string
             requestBody:
                 required: true
                 content:
                     application/json:
                         schema:
                             required:
-                                - private_key
                                 - private_key
                             properties:
                                 name:
@@ -3449,7 +3424,7 @@ paths:
                             type: object
                             additionalProperties: false
             responses:
-                '201':
+                "201":
                     description: "The updated private key's UUID."
                     content:
                         application/json:
@@ -3457,13 +3432,18 @@ paths:
                                 properties:
                                     uuid: {type: string}
                                 type: object
-                '401':
-                    $ref: '#/components/responses/401'
-                '400':
-                    $ref: '#/components/responses/400'
+                "401":
+                    $ref: "#/components/responses/401"
+                "400":
+                    $ref: "#/components/responses/400"
             security:
                 - bearerAuth: []
-                - bearerAuth: []
+            parameters:
+                - name: uuid
+                  in: path
+                  required: true
+                  schema:
+                    type: string
     /servers:
         get:
             tags:
@@ -3498,9 +3478,6 @@ paths:
                 content:
                     application/json:
                         schema:
-                            required:
-                                - ip
-                                - private_key_uuid
                             properties:
                                 name:
                                     type: string
@@ -3516,7 +3493,7 @@ paths:
                                     description: 'The IP of the server.'
                                 port:
                                     type: string
-                                    example: '22'
+                                    example: 22
                                     description: 'The port of the server.'
                                 user:
                                     type: string
@@ -3595,7 +3572,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Server deleted.'
@@ -3619,19 +3596,6 @@ paths:
             summary: Update
             description: 'Update Server.'
             operationId: update-server-by-uuid
-            parameters:
-                - name: uuid
-                  in: path
-                  description: 'UUID of the server.'
-                  required: true
-                  schema:
-                    type: string
-                    format:
-                - name: uuid
-                  in: path
-                  required: true
-                  schema:
-                    type: string
             requestBody:
                 description: 'Server updated.'
                 required: true
@@ -3670,7 +3634,10 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/Server'
+                                type: array
+                                items:
+                                    $ref: '#/components/schemas/Server'
+                                $ref: "#/components/schemas/Server"
                 '401':
                     $ref: '#/components/responses/401'
                 '400':
@@ -3679,6 +3646,12 @@ paths:
                     $ref: '#/components/responses/404'
             security:
                 - bearerAuth: []
+            parameters:
+                - name: uuid
+                  in: path
+                  required: true
+                  schema:
+                    type: string
     '/servers/{uuid}/resources':
         get:
             tags:
@@ -4199,7 +4172,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Start service.'
@@ -4231,7 +4204,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Stop service.'
@@ -4263,7 +4236,7 @@ paths:
                   required: true
                   schema:
                     type: string
-                    format:
+                    format: ""
             responses:
                 '200':
                     description: 'Restart service.'
@@ -4859,8 +4832,12 @@ components:
                     type: boolean
                 swarm_cluster:
                     type: string
+                delete_unused_volumes:
+                    type: boolean
+                delete_unused_networks:
+                    type: boolean
                 settings:
-                    $ref: '#/components/schemas/ServerSetting'
+                    $ref: "#/components/schemas/ServerSetting"
             type: object
         ServerSetting:
             description: 'Server Settings model'
@@ -4893,7 +4870,7 @@ components:
                     type: boolean
                 is_reachable:
                     type: boolean
-                is_server_api_enabled:
+                is_sentinel_enabled:
                     type: boolean
                 is_swarm_manager:
                     type: boolean
@@ -4915,11 +4892,11 @@ components:
                     type: string
                 logdrain_newrelic_license_key:
                     type: string
-                metrics_history_days:
+                sentinel_metrics_history_days:
                     type: integer
-                metrics_refresh_rate_seconds:
+                sentinel_metrics_refresh_rate_seconds:
                     type: integer
-                metrics_token:
+                sentinel_token:
                     type: string
                 docker_cleanup_frequency:
                     type: string
